# presentation-of-my-portfolio

./: .gitignore  default.conf  docker-compose.yaml  dockerfile  main.py  nginx.conf  pyproject.toml  settings.py
api/: __init__.py
api/v1/: __init__.py
api/v1/projects/: schemas.py  views.py
api/v1/сertificates/: services.py  views.py
static/: custom_swagger.css
